--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -32,9 +32,10 @@
 @import url(jquery.mCustomScrollbar.css);
 @import url(vegas.css);
 /* Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("http://fonts.googleapis.com/css?family=Roboto:400,700");
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700");
 @import url("https://fonts.googleapis.com/css?family=Pacifico");
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 /*
 * http://meyerweb.com/eric/tools/css/reset/ 
 * v2.0 | 20110126
@@ -117,7 +118,7 @@ table {
   font-weight: 400;
   color: #525f71;
   letter-spacing: 1px;
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   top: 90px;
   width: 100%;
   left: 0;
@@ -359,7 +360,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 
 h1 {
   font-size: 40px;
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   font-weight: 700;
 }
 
@@ -687,7 +688,7 @@ sup {
   color: #191d22;
 }
 #right-side .content h3 {
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -762,7 +763,7 @@ sup {
 }
 #right-side .content .team-col .team-description h5 {
   color: #191d22;
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   text-transform: uppercase;
   font-size: 0.9em;
   margin-bottom: 3px;
@@ -803,7 +804,7 @@ sup {
   width: 100%;
   text-align: center;
   color: #FFFFFF;
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   text-transform: uppercase;
   font-size: 1em;
   letter-spacing: 2px;
@@ -891,7 +892,7 @@ sup {
   border-left: 50px solid transparent;
 }
 .widget-angle-top-right span.icon-text {
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   font-weight: 700;
   position: absolute;
   top: -47px;
@@ -911,7 +912,7 @@ sup {
   border-left: 50px solid transparent;
 }
 .widget-angle-bottom-right span.icon-text {
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   font-weight: 700;
   position: absolute;
   top: 23px;
@@ -931,7 +932,7 @@ sup {
   border-right: 50px solid transparent;
 }
 .widget-angle-bottom-left span.icon-text {
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   font-weight: 700;
   position: absolute;
   top: 23px;
@@ -951,7 +952,7 @@ sup {
   border-right: 50px solid transparent;
 }
 .widget-angle-top-left span.icon-text {
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   font-weight: 700;
   position: absolute;
   top: -47px;
@@ -1144,7 +1145,7 @@ sup {
 .dialog .dialog-inner h4 {
   color: #FFFFFF;
   font-size: 40px;
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   font-weight: 700;
 }
 .dialog .dialog-inner p {
