--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -493,7 +493,7 @@ sup {
   overflow: hidden;
   top: 0;
   left: -50%;
-/*   background: rgba(50, 58, 69, 0.9); */
+   background: rgba(0, 0, 0, 0.5); 
   width: 100%;
   height: 100%;
   -webkit-transition: all 0.5s cubic-bezier(0.7, 0, 0.3, 1);
