--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -1886,6 +1886,18 @@ footer p {
 /* Large Devices, Wide Screens */
 /* Notebook devices */
 /* Medium Devices, Desktops */
+@media only screen and (max-width: 1280px) {
+	h1 {
+	  font-size: 34px;
+	  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+	  font-weight: 700;
+	}
+	h2 {
+	  font-size: 18px;
+	  margin-top: 15px;
+	  margin-bottom: 30px;
+	}
+}
 @media only screen and (max-width: 1024px) {
   .overlay {
     left: 0;
