--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -1072,7 +1072,7 @@ sup {
 .dialog__overlay {
   position: absolute;
   z-index: 1;
-  background: rgba(31, 34, 46, 0.9);
+  background: rgba(0, 0, 0, 0.8);
   opacity: 0;
   transition: opacity 0.3s;
 }
@@ -2050,6 +2050,18 @@ footer p {
 }
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
+
+	h1 {
+	  font-size: 30px;
+	  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+	  font-weight: 700;
+	}
+	h2 {
+	  font-size: 16px;
+	  margin-top: 15px;
+	  margin-bottom: 30px;
+	}
+
   #left-side {
     padding: 50px 0 100px;
   }
