--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -128,7 +128,7 @@ table {
 }
 #loading #preloader span {
   position: absolute;
-  border: 8px solid #ff3366;
+  border: 8px solid #ED1C5F;
   border-top: 8px solid transparent;
   border-radius: 999px;
 }
@@ -464,11 +464,11 @@ sup {
 }
 
 .action-btn {
-  background: #ff3366;
+  background: #ED1C5F;
   font-weight: 600;
   padding: 0.7em 2em;
   color: #FFFFFF;
-  border: 2px solid #ff3366;
+  border: 2px solid #ED1C5F;
   display: block;
   float: left;
 }
@@ -868,7 +868,7 @@ sup {
 #right-side .content .photo-line figure .photo-details span.border {
   display: block;
   height: 2px;
-  background: #ff3366;
+  background: #ED1C5F;
   width: 10%;
   margin: 0.8em 0 1em;
 }
@@ -886,7 +886,7 @@ sup {
   background: transparent;
   border: none;
   padding: 0;
-  color: #ff3366;
+  color: #ED1C5F;
   font-size: 1em;
   border-top: 50px solid #2B2D35;
   border-left: 50px solid transparent;
@@ -906,7 +906,7 @@ sup {
   background: transparent;
   border: none;
   padding: 0;
-  color: #ff3366;
+  color: #ED1C5F;
   font-size: 1em;
   border-bottom: 50px solid #2B2D35;
   border-left: 50px solid transparent;
@@ -926,7 +926,7 @@ sup {
   background: transparent;
   border: none;
   padding: 0;
-  color: #ff3366;
+  color: #ED1C5F;
   font-size: 1em;
   border-bottom: 50px solid #2B2D35;
   border-right: 50px solid transparent;
@@ -946,7 +946,7 @@ sup {
   background: transparent;
   border: none;
   padding: 0;
-  color: #ff3366;
+  color: #ED1C5F;
   font-size: 1em;
   border-top: 50px solid #2B2D35;
   border-right: 50px solid transparent;
@@ -1020,7 +1020,7 @@ sup {
   text-align: center;
 }
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: #ff3366;
+  background-color: #ED1C5F;
 }
 
 .mCSB_scrollTools-left {
@@ -1105,7 +1105,7 @@ sup {
   width: 100%;
   height: 100%;
   z-index: -1;
-  border: 1px solid #ff3366;
+  border: 1px solid #ED1C5F;
   background: rgba(32, 35, 45, 0.8);
 }
 
@@ -1209,13 +1209,13 @@ sup {
   color: #747c83 !important;
 }
 #subscribe #notifyMe .form-group button.submit {
-  border: 2px solid #ff3366;
+  border: 2px solid #ED1C5F;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
   border-radius: 0;
   font-family: "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
-  background: #ff3366;
+  background: #ED1C5F;
   color: #FFFFFF;
   height: 50px;
   padding: 1em 0;
@@ -1256,7 +1256,7 @@ sup {
 }
 #subscribe .block-message.show-block-valid {
   bottom: 0;
-  background: #ff3366;
+  background: #ED1C5F;
 }
 #subscribe p.notify-valid {
   color: #FFFFFF;
@@ -1425,7 +1425,7 @@ sup {
   text-align: center;
 }
 .info-contact .item-map .contact-item i {
-  color: #ff3366;
+  color: #ED1C5F;
   font-size: 2em;
 }
 .info-contact .item-map .contact-item a {
@@ -1433,7 +1433,7 @@ sup {
   color: #757A86;
 }
 .info-contact .item-map .contact-item a:hover {
-  color: #ff3366;
+  color: #ED1C5F;
 }
 
 #contact-form {
@@ -1483,7 +1483,7 @@ sup {
   font-size: 1em;
   display: block;
   margin: 0 auto 0;
-  background: #ff3366;
+  background: #ED1C5F;
   color: #FFFFFF;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -1563,11 +1563,11 @@ sup {
   transition: all 0.3s cubic-bezier(0, 0, 0.58, 1);
 }
 .useful-links a:hover {
-  color: #ff3366;
+  color: #ED1C5F;
   background: transparent;
 }
 .useful-links a:hover i {
-  color: #ff3366;
+  color: #ED1C5F;
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
