--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -2007,6 +2007,15 @@ footer p {
 }
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
+
+  h1.text-intro {
+    font-size: 24px;
+  }
+
+  h2.text-intro {
+    font-size: 16px;
+  }
+
   .light-btn {
     max-width: 70%;
     min-width: 60%;
