--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -1891,14 +1891,25 @@ footer p {
 	  font-size: 34px;
 	  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
 	  font-weight: 700;
+	  color: blue;
 	}
 	h2 {
 	  font-size: 18px;
 	  margin-top: 15px;
 	  margin-bottom: 30px;
+	  color: blue;
 	}
 }
 @media only screen and (max-width: 1024px) {
+
+  h1.text-intro {
+    color: yellow;
+  }
+
+  h2.text-intro {
+    color: yellow;
+  }
+
   .overlay {
     left: 0;
     width: 100%;
@@ -2010,10 +2021,12 @@ footer p {
 
   h1.text-intro {
     font-size: 24px;
+    color: green;
   }
 
   h2.text-intro {
     font-size: 16px;
+    color: green;
   }
 
   .light-btn {
@@ -2073,10 +2086,12 @@ footer p {
 
   h1.text-intro {
     font-size: 24px;
+    color: red;
   }
 
   h2.text-intro {
     font-size: 16px;
+    color: red;
   }
 
   .light-btn {
