--- a/css/style-agency.css
+++ b/css/style-agency.css
@@ -1888,26 +1888,26 @@ footer p {
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 1280px) {
 	h1 {
-	  font-size: 34px;
+	  font-size: 32px;
 	  font-family: Roboto, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
 	  font-weight: 700;
-	  color: blue;
+/* 	  color: blue; */
 	}
 	h2 {
 	  font-size: 18px;
 	  margin-top: 15px;
 	  margin-bottom: 30px;
-	  color: blue;
+/* 	  color: blue; */
 	}
 }
 @media only screen and (max-width: 1024px) {
 
   h1.text-intro {
-    color: yellow;
+/*     color: yellow; */
   }
 
   h2.text-intro {
-    color: yellow;
+/*     color: yellow; */
   }
 
   .overlay {
@@ -2021,12 +2021,12 @@ footer p {
 
   h1.text-intro {
     font-size: 24px;
-    color: green;
+/*     color: green; */
   }
 
   h2.text-intro {
     font-size: 16px;
-    color: green;
+/*     color: green; */
   }
 
   .light-btn {
@@ -2086,12 +2086,12 @@ footer p {
 
   h1.text-intro {
     font-size: 24px;
-    color: red;
+/*     color: red; */
   }
 
   h2.text-intro {
     font-size: 16px;
-    color: red;
+/*     color: red; */
   }
 
   .light-btn {
